--- a/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
+++ b/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
@@ -40,6 +40,9 @@
     <EmbeddedResource Include="Fonts\Font_Awesome_5_Free-Solid-900.otf" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Update="Views\Favorites.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\HomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
