--- a/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
+++ b/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
@@ -46,6 +46,9 @@
     <EmbeddedResource Update="Views\Categories.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Erkek.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Favorites.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
