Tum sporlar kategorisi eklendi

--- a/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
+++ b/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
@@ -61,5 +61,8 @@
     <EmbeddedResource Update="Views\RegisterWiew.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Tumsporlar.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
