--- a/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
+++ b/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
@@ -64,7 +64,7 @@
     <EmbeddedResource Update="Views\RegisterWiew.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\Tumsporlar.xaml">
+    <EmbeddedResource Update="Views\TKurunler.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
