Revert "duzenleme yapıldı bir kaç kateogri daha eklendi"
This reverts commit d50daaee3bd1e95e5075007f55b4f3c89c2f450f.

--- a/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
+++ b/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
@@ -64,7 +64,7 @@
     <EmbeddedResource Update="Views\RegisterWiew.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\TKurunler.xaml">
+    <EmbeddedResource Update="Views\Tumsporlar.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
