--- a/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
+++ b/eShopOnContainers/eShopOnContainers.Core/eShopOnContainers.Core.csproj
@@ -10,6 +10,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\NewFolder\**" />
+    <EmbeddedResource Remove="Services\NewFolder\**" />
+    <None Remove="Services\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FirebaseDatabase.net" Version="4.0.7" />
     <PackageReference Include="IdentityModel" Version="3.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
