--- a/eShopOnContainers/eShopOnContainers.Droid/eShopOnContainers.Droid.csproj
+++ b/eShopOnContainers/eShopOnContainers.Droid/eShopOnContainers.Droid.csproj
@@ -346,5 +346,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\paten.PNG" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\BisikletEkle2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\BisikletEkle1.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
